fix for birds behind things now using remote mongo

--- a/private/css/views/plants.styl
+++ b/private/css/views/plants.styl
@@ -10,6 +10,9 @@ section[data-page="plants"]
 	.pageContent
 		max-width 1000px
 		margin auto
+		// needed for birds to fly under
+		position relative
+		z-index 10
 
 	&:after
 		background url(/img/greenhills.png) no-repeat
